--- a/src/pages/ManageProduct/ManageProduct.module.css
+++ b/src/pages/ManageProduct/ManageProduct.module.css
@@ -13,15 +13,18 @@
   gap: 2rem;
 }
 
-.input {
-  width: 55%;
+.buttons {
+  width: 100%;
+  padding: 0 1rem;
+  margin: 1rem 0;
+  position: sticky;
+  bottom: 6rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  z-index: 2;
 }
 
-.input > div {
-  border-radius: 20px;
-}
-
-.image {
-  height: 160px;
-  width: 50%;
+.buttons:has(> :nth-child(-n + 1):last-child) {
+  width: 80%;
 }
