--- a/src/pages/ManageCategory/ManageCategory.module.css
+++ b/src/pages/ManageCategory/ManageCategory.module.css
@@ -21,3 +21,15 @@
   height: 160px;
   width: 50%;
 }
+
+.buttons {
+  width: 100%;
+  padding: 0 1rem;
+  margin: 2rem 0;
+  position: sticky;
+  bottom: 6rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  z-index: 2;
+}
