--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -40,3 +40,15 @@
 .qr-container img {
   width: 80%;
 }
+
+.buttons {
+  width: 100%;
+  padding: 0 1rem;
+  margin: 2rem 0;
+  position: sticky;
+  bottom: 6rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  z-index: 2;
+}
