--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -1,23 +1,32 @@
 .container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 .container img {
-  width: 50%;
+    width: 50%;
 }
 
 .step-back-icon {
-  position: absolute;
-  top: 10px;
-  left: 5px;
-  color: var(--inactive-icon-color);
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    color: var(--inactive-icon-color);
 }
 
 .password-validator {
-  width: 70%;
+    width: 70%;
+}
+
+.regulations {
+    display: flex;
+    flex-direction: column;
+}
+
+.regulations p {
+    margin: 10px 0;
 }
