--- a/src/pages/ManageProductVariants/ManageProductVariants.module.css
+++ b/src/pages/ManageProductVariants/ManageProductVariants.module.css
@@ -6,6 +6,20 @@
     gap: 1rem;
 }
 
+.skeletons {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.skeletons > span {
+    width: 75%;
+    height: 4rem;
+    transform: none;
+}
+
 .add-card {
     height: 4rem;
     width: 75%;
@@ -23,4 +37,6 @@
     background-color: var(--pulse-loading-color);
     text-decoration: none;
     color: var(--primary-font-color);
+    font-weight: 500;
 }
+
