--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,27 +1,26 @@
 .container {
-  padding: 1rem 1rem;
-  padding-top: max(env(safe-area-inset-top, 15px), 1rem);
-  display: grid;
-  grid-template-areas: 'step-back banner settings';
-  align-items: center;
-  justify-items: center;
-  background-color: var(--background-color);
+    padding: max(env(safe-area-inset-top, 15px), 1rem) 1rem 1rem;
+    display: grid;
+    grid-template-areas: 'step-back banner settings';
+    align-items: center;
+    justify-items: center;
+    background-color: var(--background-color);
 }
 
 .step-back {
-  grid-area: step-back;
+    grid-area: step-back;
 }
 
 .step-back-icon {
-  color: var(--inactive-icon-color);
+    color: var(--inactive-icon-color);
 }
 
 .banner {
-  grid-area: banner;
-  object-fit: cover;
-  width: 70%;
+    grid-area: banner;
+    object-fit: cover;
+    width: 70%;
 }
 
 .settings {
-  grid-area: settings;
+    grid-area: settings;
 }
