--- a/src/components/QrScanner/QrScanner.module.css
+++ b/src/components/QrScanner/QrScanner.module.css
@@ -1,6 +1,6 @@
-.scanner-container {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
