--- a/src/components/UserPoints/UserPoints.module.css
+++ b/src/components/UserPoints/UserPoints.module.css
@@ -8,9 +8,9 @@
     border-radius: 20px;
     background-color: var(--primary-color);
 
-    -webkit-box-shadow: 0px 4px 10px -4px rgba(66, 68, 90, 1);
-    -moz-box-shadow: 0px 4px 10px -4px rgba(66, 68, 90, 1);
-    box-shadow: 0px 4px 10px -4px rgba(66, 68, 90, 1);
+    -webkit-box-shadow: 0 4px 10px -4px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 0 4px 10px -4px rgba(66, 68, 90, 1);
+    box-shadow: 0 4px 10px -4px rgba(66, 68, 90, 1);
 }
 
 .container:has(.loader) {
