--- a/src/components/QrScanner/QrScanner.module.css
+++ b/src/components/QrScanner/QrScanner.module.css
@@ -4,3 +4,17 @@
     justify-content: center;
     align-items: center;
 }
+
+.video-container {
+    width: 90%;
+    height: 90%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.video {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
