--- a/src/pages/FinalizeTransaction/FinalizeTransaction.module.css
+++ b/src/pages/FinalizeTransaction/FinalizeTransaction.module.css
@@ -8,6 +8,19 @@
     width: 85%;
 }
 
+.user{
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.user span{
+    margin-bottom: 5px;
+    font-size: 1.2rem;
+}
+
 .summary-container {
     width: 85%;
     margin-top: 1rem;
